--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Georgia;
+  font-family: Roboto;
   font-size: 16px;
   margin: 0 auto;   /* center content */
   max-width: 800px; /* limit width */
